--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   "homepage": "https://github.com/ltaverao95/acreditacion-um-react#readme",
   "dependencies": {
     "@types/react": "^16.7.6",
+    "@types/react-bootstrap": "^0.32.14",
     "@types/react-dom": "^16.0.9",
     "@types/react-select": "^2.0.7",
+    "bootstrap": "^4.1.3",
     "react": "^16.6.3",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-select": "^2.1.1"
   },
