--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/react-dom": "^16.0.9",
     "@types/react-select": "^2.0.7",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.3",
+    "chartjs-funnel": "^1.0.5",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
