--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-bootstrap": "^0.32.14",
     "@types/react-dom": "^16.0.9",
     "@types/react-select": "^2.0.7",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.3",
     "chartjs-funnel": "^1.0.5",
