--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-bootstrap": "^0.32.14",
     "@types/react-dom": "^16.0.9",
     "@types/react-select": "^2.0.7",
+    "@types/reactstrap": "^6.4.2",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.3",
@@ -30,7 +31,8 @@
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
-    "react-select": "^2.1.1"
+    "react-select": "^2.1.1",
+    "reactstrap": "^6.5.0"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
