--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^3.3.7",
     "chart.js": "^2.7.3",
     "chartjs-funnel": "^1.0.5",
+    "chartjs-plugin-datalabels": "^0.4.0",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
