--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
     "concurrently": "^4.0.1",
+    "css-loader": "^1.0.1",
+    "file-loader": "^2.0.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "typescript": "^3.1.6",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
